--- a/w1d2recipe/style/recipe.css
+++ b/w1d2recipe/style/recipe.css
@@ -28,7 +28,6 @@ h1, h2{
     display: inline-block;
     padding: 5px 0;
 }
-
 h1{
     font-size: 22pt;
     text-transform: capitalize;
@@ -57,11 +56,11 @@ h1{
 
 /* -- Directions -- */
 .direction-section ol li ul li{
-    background-image: url("../assets/pie_icon.gif"); background-repeat: no-repeat;
+    background-image: url("../assets/pie_icon.gif");
+    background-repeat: no-repeat;
     list-style: none; padding-left: 3%;
 }
 .direction-section p span{
-    /* -webkit-text-stroke:1px black; */
     text-decoration: line-through;
 }
 
