--- a/w1d2recipe/style/recipe.css
+++ b/w1d2recipe/style/recipe.css
@@ -20,7 +20,7 @@ h1, h2{
     color: #A4A400;
     background-color: #F0F0F0;
     font-weight: normal;
-    font-family: Lucida, Helvetica, Arial, sans-serif;
+    font-family: 'Lucida Sans Unicode', Helvetica, Arial, sans-serif;
     text-decoration: underline;
     font-size: 18pt;
     text-transform: uppercase;
