added js checker

--- a/w3d3-maze/style/maze.css
+++ b/w3d3-maze/style/maze.css
@@ -105,3 +105,8 @@ neighboring elements.  Necessary to avoid giving ids to the boundary divs
     height: 150px;
     width: 98px;
 }
+
+#validate{
+    right:0;
+    position: fixed;
+}
