--- a/w4d2-ajax/q3_4/view/navbar.ejs
+++ b/w4d2-ajax/q3_4/view/navbar.ejs
@@ -1,6 +1,6 @@
 <div class="navbar">
     <ul>
-        <li> <a href="/">Shop</a></li>
-        <li><a href="/cart">Your Cart</a></li>
+        <li><a href="/">Shop</a></li>
+        <li><a href="/cart">Your Cart</a><span id="cart_size"><%= cartSize %></span></li>
     </ul>
 </div>
